--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   ],
   "main": "./lib",
   "dependencies": {
-    "xmldom": "0.5.0"
+    "xmldom": "0.6.0"
   },
   "devDependencies": {
-    "mocha": "1.x.x",
-    "chai": "1.x.x"
+    "mocha": "9.0.2",
+    "chai": "4.3.4"
   },
   "engines": {
     "node": ">= 0.4.0"
