--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   ],
   "main": "./lib",
   "dependencies": {
-    "xmldom": "0.6.0"
+    "@xmldom/xmldom": "0.7.1"
   },
   "devDependencies": {
-    "mocha": "9.0.2",
-    "chai": "4.3.4"
+    "chai": "4.3.4",
+    "mocha": "9.0.2"
   },
   "engines": {
     "node": ">= 0.4.0"
